# mantis_aws_database

./: .gitignore  environment.yml  pyproject.toml
src/mantis_aws_database/: database_access.py
