[tool.poetry]
name = "mantis-aws-database"
version = "0.1.0"
description = ""
authors = ["giorgos papageorgiou <gpap.gpap@gmail.com>"]
readme = "README.md"
packages = [{ include = "mantis_aws_database", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.29.0"
jwt = "^1.3.1"
urllib3 = "^1.26.6,<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
